--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-ATLAS_URI="mongodb+srv://merncrud:rafay123@Cluster0.wqzro.mongodb.net/employees?retryWrites=true&w=majority"
+ATLAS_URI=mongodb+srv://merncrud:rafay123@Cluster0.wqzro.mongodb.net/employees?retryWrites=true&w=majority
 PORT=5050
