--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.1"
+    "mongodb": "^6.8.1",
+    "mongoose": "^8.6.1"
   }
 }
